edit in catalog cotroller
