# app/Models/Catalog.php
@@ -8,15 +8,14 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 
 class Catalog extends Model
 {
-    use HasFactory;
-    protected $fillable = ['Name', 'Price'];
-    protected $table = 'Catalogs';
-    protected $primaryKey = 'Id';
-    public $timestamps = false;
+  use HasFactory;
+  protected $fillable = ['Name', 'Price'];
+  protected $table = 'Catalogs';
+  protected $primaryKey = 'Id';
+  public $timestamps = false;
 
-    public function quantities()
-    {
-        return $this->hasMany(Color::class, 'catalogId');
-    }
-
+  public function quantities()
+  {
+    return $this->hasMany(Color::class, 'catalogId');
+  }
 }
