# app/Models/Color.php
@@ -8,13 +8,14 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 
 class Color extends Model
 {
-    use HasFactory;
-    protected $fillable = ['Name','Quantity','CatalogId'];
-    protected $table = 'Colors';
-    protected $primaryKey = 'Id';
-    public $timestamps = false;
+  use HasFactory;
+  protected $fillable = ['Name', 'Quantity', 'CatalogId'];
+  protected $table = 'Colors';
+  protected $primaryKey = 'Id';
+  public $timestamps = false;
 
-    public function catalog() {
+  public function catalog()
+  {
     return $this->belongsTo(Catalog::class, 'CatalogId');
-    }
+  }
 }
